tests/macros/duplicate/filter_async.stderr
error: duplicate option `filter_async`
 --> $DIR/filter_async.rs:4:15
  |
4 |         async filter: todo!(),
  |               ^^^^^^
