tests/macros/duplicate/filter_async.rs
fn main() {
    let q = inquisition::questions![Input {
        async filter: todo!(),
        async filter: todo!(),
    }];
}
